[gd_scene load_steps=10 format=3 uid="uid://4s2uh67x8h3a"]

[ext_resource type="Script" uid="uid://cokylr8bfnu6u" path="res://Levels/Level 1/level_1.gd" id="1_xsdw8"]
[ext_resource type="Texture2D" uid="uid://du6hsuoi2vdy4" path="res://07f45545-f223-4b0a-b62c-4f34060c0d89.png" id="2_41qmv"]
[ext_resource type="Texture2D" uid="uid://yc3cnl0m85ev" path="res://Tiles/LightBrown.jpg" id="2_xsdw8"]
[ext_resource type="Texture2D" uid="uid://ygbk4kfuuoy4" path="res://Tiles/DarkBrown.jpg" id="3_4m2h1"]
[ext_resource type="Script" uid="uid://wsnjxtk4ih02" path="res://Levels/win_lose_panel.gd" id="4_4m2h1"]
[ext_resource type="Script" uid="uid://cjthwlam42cgo" path="res://Levels/Level 1/logic_panel.gd" id="4_xsdw8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_41qmv"]
texture = ExtResource("2_xsdw8")
2:0/0 = 0
1:2/0 = 0
1:3/0 = 0
2:1/0 = 0
3:2/0 = 0
3:1/0 = 0
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:1/0 = 0
4:2/0 = 0
4:3/0 = 0
4:4/0 = 0
3:3/0 = 0
2:3/0 = 0
0:3/0 = 0
0:2/0 = 0
0:1/0 = 0
1:1/0 = 0
2:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n2mur"]
texture = ExtResource("3_4m2h1")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_atwlb"]
sources/0 = SubResource("TileSetAtlasSource_41qmv")
sources/1 = SubResource("TileSetAtlasSource_n2mur")

[node name="Level1" type="Node2D"]
script = ExtResource("1_xsdw8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(66.5, 65.5)
scale = Vector2(0.169922, 0.145508)
texture = ExtResource("2_41qmv")

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource("TileSet_atwlb")
rendering_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(196611, 0, 1, 262148, 0, 1, 131074, 0, 1, 65537, 0, 1, 0, 0, 1, 327685, 0, 1, 393222, 0, 1, 458759, 0, 1, 196613, 0, 1, 131078, 0, 1, 65543, 0, 1, 327683, 0, 1, 393218, 0, 1, 458753, 0, 1, 131076, 0, 1, 65541, 0, 1, 6, 0, 1, 4, 0, 1, 65539, 0, 1, 2, 0, 1, 131072, 0, 1, 196609, 0, 1, 262146, 0, 1, 327681, 0, 1, 262144, 0, 1, 393216, 0, 1, 458755, 0, 1, 393220, 0, 1, 458757, 0, 1, 327687, 0, 1, 262150, 0, 1, 196615, 0, 1, 458756, 65537, 2, 458758, 65537, 2, 393223, 65537, 2, 7, 65537, 2, 131079, 65537, 2, 262151, 65537, 2, 327686, 65537, 2, 393221, 65537, 2, 393219, 65537, 2, 458754, 65537, 2, 393217, 65537, 2, 327680, 65537, 2, 196608, 65537, 2, 65536, 65537, 2, 1, 65537, 2, 65538, 65537, 2, 131073, 65537, 2, 196610, 65537, 2, 262145, 65537, 2, 327682, 65537, 2, 262147, 65537, 2, 327684, 65537, 2, 196612, 65537, 2, 262149, 65537, 2, 196614, 65537, 2, 131077, 65537, 2, 131075, 65537, 2, 458752, 65537, 2, 65540, 65537, 2, 3, 65537, 2, 5, 65537, 2, 65542, 65537, 2)

[node name="Layer1" type="TileMapLayer" parent="Board"]
use_parent_material = true
position = Vector2(64, 64)
tile_set = SubResource("TileSet_atwlb")

[node name="CamTopCenterBoard" type="Camera2D" parent="."]
position = Vector2(64, 64)
zoom = Vector2(4.5, 4.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="WinPanel" type="Panel" parent="UI"]
visible = false
offset_left = 236.0
offset_top = 100.0
offset_right = 928.0
offset_bottom = 547.0
script = ExtResource("4_4m2h1")

[node name="WinLabel" type="Label" parent="UI/WinPanel"]
layout_mode = 0
offset_left = 198.0
offset_top = 103.0
offset_right = 266.0
offset_bottom = 152.0
scale = Vector2(4, 4)
text = "You Win!
"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/WinPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 193.0
offset_right = 293.0
offset_bottom = 251.0
scale = Vector2(2.5, 2.5)

[node name="HomeButton" type="Button" parent="UI/WinPanel/HBoxContainer"]
layout_mode = 2
text = "Home"

[node name="Level Selector" type="Button" parent="UI/WinPanel/HBoxContainer"]
layout_mode = 2
text = "Levels"

[node name="NextButton" type="Button" parent="UI/WinPanel/HBoxContainer"]
layout_mode = 2
text = "Next"

[node name="RetryButton" type="Button" parent="UI/WinPanel/HBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="LogicPanel" type="Panel" parent="UI"]
self_modulate = Color(0, 0, 0, 1)
light_mask = 1023
visibility_layer = 1023
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -534.0
offset_top = -270.0
offset_right = -453.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00182382
scale = Vector2(2.5, 2.5)
script = ExtResource("4_xsdw8")

[node name="ApplyButton" type="Button" parent="UI/LogicPanel"]
layout_mode = 0
offset_right = 52.0
offset_bottom = 31.0
scale = Vector2(0.4, 0.4)
text = "Apply"

[node name="ColorRect" type="ColorRect" parent="UI/LogicPanel"]
visible = false
layout_mode = 0
offset_left = -17.2364
offset_top = -19.9686
offset_right = 112.764
offset_bottom = 2.0314
rotation = -0.00714684
color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="UI/LogicPanel"]
layout_mode = 0
offset_left = -16.0372
offset_top = -20.3708
offset_right = 155.963
offset_bottom = 7.62922
rotation = -0.00444009
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 18
text = "Movement Options"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LogicPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 2.0
offset_right = 143.0
offset_bottom = 278.0
scale = Vector2(0.35, 0.35)

[node name="CheckBoxUp" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "Up"

[node name="CheckBoxDown" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "Down"

[node name="CheckBoxLeft" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "Left"

[node name="CheckBoxRight" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "Right"

[node name="CheckBoxUpRight" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "UpRight"

[node name="CheckBoxUpLeft" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "UpLeft"

[node name="CheckBoxDownRight" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "DownRight"

[node name="CheckBoxDownLeft" type="CheckBox" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2
text = "DownLeft
"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 925.0
offset_top = 50.0
offset_right = 1039.0
offset_bottom = 90.0
scale = Vector2(1.5, 1.5)

[node name="Restart" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Home" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Home"

[connection signal="pressed" from="UI/WinPanel/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="UI/WinPanel/HBoxContainer/Level Selector" to="." method="_on_level_selector_pressed"]
[connection signal="pressed" from="UI/WinPanel/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="UI/WinPanel/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/LogicPanel/ApplyButton" to="UI/LogicPanel" method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Home" to="." method="_on_home_pressed"]
